2011-06-03  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/planner.c: variable renaming and type change: "time_t
	  estimates" is now "int total_estimates"; new local variable
	  "estimates_for_client" as placeholder for "i" when appropriate

2011-06-03  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/planner.c: use g_strdup_printf() instead of g_strjoin() to
	  build various strings; remove 4 local variables in the process

2011-06-03  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/planner.c: write the beginning of a request using a GString
	  instead of using g_strjoin()

2011-06-03  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/planner.c: deal with noop first, jump to a new label
	  "send", and reindent - one less indentation level

2011-06-03  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/planner.c: Define nb_client, nb_server and has_* earlier.
	  This is a preparation for the next commit.

2011-06-03  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/planner.c: remove two unused variables

2011-06-02  Francis Galiegue <fgaliegue@gmail.com>
	* client-src/sendbackup-dump.c: fix compile error due to undeclared
	  tmpbuf, remove tmpbuf entirely

2011-06-02  Francis Galiegue <fgaliegue@gmail.com>
        * Many files (12): remove unndeeded uses of the temporary variable
	  tmpbuf in the g_strdup_printf(e1, e2, ..., NULL) case

2011-06-02  Francis Galiegue <fgaliegue@gmail.com>
        * Many files (15): remove unndeeded uses of the temporary variable
	  tmpbuf in the g_strconcat(e1, e2, ..., NULL) case

2011-06-02  Francis Galiegue <fgaliegue@gmail.com>
        * Many files (14): remove unndeeded uses of the temporary variable
	  tmpbuf in the g_strconcat(e1, e2, NULL) case

2011-06-02  Francis Galiegue <fgaliegue@gmail.com>
	* Many files (14): Get rid of newvstrallocf()
	* common-src/amanda.h, common-src/alloc.c: remove macro, prototypes,
	  implementation

2011-06-02  Francis Galiegue <fgaliegue@gmail.com>